# zmanager

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  fix_unwrap.py  install.sh  tzap-rev.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  package-preview.yml  release.yml
Formula/: zm.rb
completions/: README.md  _zm  zm.bash  zm.fish  zm.ps1
crates/zmanager-apple-archive/: Cargo.toml
crates/zmanager-apple-archive/src/: lib.rs
crates/zmanager-apple-archive/tests/: metadata_roundtrip.rs  metadata_roundtrip_file.rs
crates/zmanager-cli/: Cargo.toml
crates/zmanager-cli/completions/: _zm  zm.bash  zm.fish  zm.ps1
crates/zmanager-cli/src/: app.rs  lib.rs  main.rs  output.rs
crates/zmanager-cli/tests/: compat_formats_cli.rs  error_cli.rs  fixture_cli.rs  help_cli.rs  tzap_cli.rs
crates/zmanager-core/: Cargo.toml
crates/zmanager-core/src/: apple_archive_backend.rs  apple_archive_backend_stub.rs  archive_browser.rs  atomic_file.rs  auth_client.rs  certificate_lifecycle.rs  contact_card.rs  deb_backend.rs  device_identity.rs  document_envelope.rs  document_signing.rs  document_verification.rs  enrollment_client.rs  jcs.rs  jobs.rs  lib.rs  libarchive_backend.rs  local_fake_tzap.rs  local_identity_store.rs  manifest.rs  p256_signature.rs  rar_backend.rs  raw_stream_backend.rs  safety.rs  secrets.rs  sevenz_backend.rs  status_client.rs  tar_gz_backend.rs  tar_metadata.rs  tar_zst_backend.rs  trust.rs  tzap_backend.rs  x509_format.rs  zip_backend.rs
crates/zmanager-core/src/trust/: tzap-production-root-ca-2026.pem
crates/zmanager-core/tests/: hostile_archives.rs  tzap_obligation_harness.rs
crates/zmanager-ffi/: Cargo.toml
crates/zmanager-ffi/include/: module.modulemap  zmanager_ffi.h
crates/zmanager-ffi/src/: lib.rs
crates/zmanager-libarchive/: Cargo.toml
crates/zmanager-libarchive-sys/: Cargo.toml  build.rs
crates/zmanager-libarchive-sys/src/: lib.rs
crates/zmanager-libarchive-sys/tests/: publish_readiness.rs
crates/zmanager-libarchive/src/: lib.rs  locale.rs
crates/zmanager-libarchive/tests/: libarchive_smoke.rs
crates/zmanager-unrar/: Cargo.toml  README.md  build.rs
crates/zmanager-unrar/cpp/: zmanager_unrar_bridge.cpp
crates/zmanager-unrar/src/: lib.rs
docs/: INSTALL.md  JOB_PROGRESS.md  WINDOWS_BUILD.md  completion-ux-plan.md  tzap-format-revisedv1.md  tzap-format-revisedv10.md  tzap-format-revisedv11.md  tzap-format-revisedv12.md  tzap-format-revisedv13.md  tzap-format-revisedv14.md  tzap-format-revisedv15.md  tzap-format-revisedv16.md  tzap-format-revisedv17.md  tzap-format-revisedv2.md  tzap-format-revisedv3.md  tzap-format-revisedv4.md  tzap-format-revisedv5.md  tzap-format-revisedv6.md  tzap-format-revisedv7.md  tzap-format-revisedv8.md  tzap-format-revisedv9.md
docs/man/: zm.1
docs/release-notes/: 1.0.0.md  1.0.1.md  1.0.2.md  1.0.3.md  1.0.4.md  1.0.5.md  1.0.6.md  1.0.7.md
fixtures/archives/: README.md  basic.7z  basic.cpio  basic.deb  basic.iso  basic.tar.xz  basic.tar.zst  basic.xar  manifest.tsv
fixtures/hostile/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: libarchive_input.rs  path_normalization.rs  zip_metadata.rs
packaging/homebrew/: zmanager.rb.template
packaging/winget/: FrankManZhu.ZManagerCLI.installer.yaml.template  FrankManZhu.ZManagerCLI.locale.en-US.yaml.template  FrankManZhu.ZManagerCLI.yaml.template  FrankZhu.ZManagerCLI.installer.yaml.template  FrankZhu.ZManagerCLI.locale.en-US.yaml.template  FrankZhu.ZManagerCLI.yaml.template  TzapOrg.ZManagerCLI.installer.yaml.template  TzapOrg.ZManagerCLI.locale.en-US.yaml.template  TzapOrg.ZManagerCLI.yaml.template
scripts/: build.bat  ci-windows.ps1  generate-package-metadata.sh  generate-third-party-notices.py  generate_fixtures.sh  inspect-runtime-deps.sh  install-zig-linux.sh  package-deb.sh  package-release-alpine.sh  package-release.sh  release-compatibility-check.sh
swift/ffi-smoke/: main.swift
