[workspace]
members = [
    "crates/zmanager-cli",
    "crates/zmanager-apple-archive",
    "crates/zmanager-core",
    "crates/zmanager-ffi",
    "crates/zmanager-libarchive",
    "crates/zmanager-libarchive-sys",
    "crates/zmanager-unrar",
]
resolver = "2"

[workspace.package]
version = "1.0.6"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/tzap-org/zmanager"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[patch.crates-io]
zmanager-libarchive-sys = { path = "crates/zmanager-libarchive-sys" }
