[workspace]
members = [
    "crates/zmanager-cli",
    "crates/zmanager-apple-archive",
    "crates/zmanager-core",
    "crates/zmanager-ffi",
    "crates/zmanager-libarchive",
    "crates/zmanager-libarchive-sys",
    "crates/zmanager-unrar",
]
resolver = "2"

[workspace.package]
version = "1.0.7"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/tzap-org/zmanager"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[patch.crates-io]
zmanager-libarchive-sys = { path = "crates/zmanager-libarchive-sys" }
tzap-core = { path = "../tzap/crates/tzap-core" }
tzap-plugin-keywrap = { path = "../tzap/crates/tzap-plugin-keywrap" }
tzap-plugin-signing = { path = "../tzap/crates/tzap-plugin-signing" }
