[package]
name = "zmanager-apple-archive"
version.workspace = true
description = "Safe, narrow AppleArchive wrapper used by zmanager-core on Apple platforms."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2.186"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
