[package]
name = "zmanager-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "zmanager-cli"
path = "src/main.rs"

[[bin]]
name = "zm"
path = "src/bin/zm.rs"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
rpassword = "7.5.2"
serde_json = "1.0.140"
zmanager-core = { path = "../zmanager-core", version = "1.0.5" }

[dev-dependencies]
flate2 = "1.1.9"
sha2 = "0.10.9"
tar = "0.4.45"
zip = "8.6.0"
zstd = "0.13.3"

[lints]
workspace = true
