[package]
name = "zmanager-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
brotli = "8.0.2"
bzip2 = "0.6.1"
filetime = "0.2.29"
flate2 = "1.1.9"
lz4_flex = "0.13.1"
lzma-rust2 = { version = "0.16.2", default-features = false, features = ["lzip", "std", "xz"] }
rand = "0.8.5"
sevenz-rust2 = { version = "0.21.0", default-features = false, features = ["aes256", "compress", "util"] }
tar = "0.4.45"
tzap-core = { git = "https://github.com/frankmanzhu/tzap", rev = "b9da0f6617240d8266be93e7ed536b0106b5601f" }
zip = "8.6.0"
zeroize = "1.8.2"
zmanager-libarchive = { path = "../zmanager-libarchive" }
zmanager-unrar = { path = "../zmanager-unrar" }
zstd = { version = "0.13.3", features = ["zstdmt"] }

[lints]
workspace = true
