[package]
name = "zmanager-core"
version.workspace = true
description = "Core archive, authentication, and policy engine for ZManager."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
brotli = "8.0.2"
bzip2 = "0.6.1"
filetime = "0.2.29"
flate2 = "1.1.9"
lz4_flex = "0.13.1"
lzma-rust2 = { version = "0.16.2", default-features = false, features = ["lzip", "std", "xz"] }
num-bigint = "0.4.6"
openssl = "0.10.80"
rand = "0.8.5"
serde_json = "1.0.140"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10.8"
time = { version = "0.3.47", features = ["parsing"] }
x509-parser = "0.18.1"
sevenz-rust2 = { version = "0.21.0", default-features = false, features = ["aes256", "compress", "util"] }
tar = "0.4.45"
tzap-core = { git = "https://github.com/tzap-org/tzap.git", rev = "ef4fb9a084d42a1406d47207b0641f7266458b2f" }
tzap-plugin-keywrap = { git = "https://github.com/tzap-org/tzap.git", rev = "ef4fb9a084d42a1406d47207b0641f7266458b2f" }
tzap-plugin-signing = { git = "https://github.com/tzap-org/tzap.git", rev = "ef4fb9a084d42a1406d47207b0641f7266458b2f" }
zip = "8.6.0"
zeroize = "1.8.2"
zmanager-apple-archive = { path = "../zmanager-apple-archive", version = "1.0.6" }
zmanager-libarchive = { path = "../zmanager-libarchive", version = "1.0.6" }
zmanager-unrar = { path = "../zmanager-unrar", version = "1.0.6" }
zstd = { version = "0.13.3", features = ["zstdmt"] }

[lints]
workspace = true
