[package]
name = "zmanager-core"
version.workspace = true
description = "Core archive, authentication, and policy engine for ZManager."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
brotli = "8.0.2"
bzip2 = "0.6.1"
filetime = "0.2.29"
flate2 = "1.1.9"
lz4_flex = "0.14.0"
lzma-rust2 = { version = "0.16.2", default-features = false, features = ["lzip", "std", "xz"] }
num-bigint = "0.4.6"
openssl = "0.10.80"
rand = "0.9.0"
serde_json = "1.0.140"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10.8"
time = { version = "0.3.47", features = ["parsing"] }
x509-parser = "0.18.1"
sevenz-rust2 = { version = "0.21.0", default-features = false, features = ["aes256", "compress", "util"] }
tar = "0.4.45"
tzap-core = "0.1.11"
tzap-plugin-keywrap = "0.1.11"
tzap-plugin-signing = "0.1.11"
zip = "8.6.0"
zeroize = "1.8.2"
zmanager-libarchive = { path = "../zmanager-libarchive", version = "1.0.6" }
zmanager-unrar = { path = "../zmanager-unrar", version = "1.0.6" }

zstd = { version = "0.13.3", features = ["zstdmt"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
zmanager-apple-archive = { path = "../zmanager-apple-archive", version = "1.0.6" }


[lints]
workspace = true
