[package]
name = "zmanager-ffi"
version.workspace = true
description = "C ABI bindings for the ZManager archive engine."
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
base64 = "0.22.1"
openssl = "0.10.80"
serde_json = "1.0.149"
zmanager-core = { path = "../zmanager-core", version = "1.0.6" }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
