[package]
name = "zmanager-libarchive-sys"
version.workspace = true
description = "Raw libarchive FFI bindings and build-time bundling for ZManager"
edition.workspace = true
license.workspace = true
repository.workspace = true
links = "archive"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2.186"

[build-dependencies]
cmake = "0.1.58"
pkg-config = "0.3.32"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
