[package]
name = "zmanager-unrar"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file = "../../vendor/unrar/license.txt"
build = "build.rs"

[lib]
path = "src/lib.rs"

[build-dependencies]
cc = "1.2.62"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
