[package]
name = "zmanager-unrar"
version.workspace = true
description = "Bindings for unrar operations used as the native RAR backend."
edition.workspace = true
repository.workspace = true
license-file = "vendor/unrar/license.txt"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
zeroize = "1.8.2"

[build-dependencies]
cc = "1.2.62"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
